--- a/www/index.html
+++ b/www/index.html
@@ -106,7 +106,7 @@
             <form data-role="popup" id="confirmAdd">
                 <div data-role="header">
                     <h3 style="padding-top: 20px;">Add Apartment</h3>
-                    <p style="text-align: center; margin: 0 10px 0 10px"> Please verify the information entered is correct </p>
+                    <p style="text-align: center; margin: 0 20px"> Please verify the information entered is correct </p>
                 </div>
     
                 <div role="main" class="ui-content">
